--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>my.cvmanager</groupId>
     <artifactId>cv-manager</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>core</module>
+        <module>web</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
