--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>my.cvmanager</groupId>
-        <artifactId>cv-manager</artifactId>
+        <artifactId>cvmanager</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
