--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -4,33 +4,35 @@
                              https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
 
-    <!--  <display-name>web</display-name>
-      <context-param>
-          <param-name>jakarta.faces.PROJECT_STAGE</param-name>
-          <param-value>Development</param-value>
-      </context-param>
+    <!--<display-name>web</display-name>
+    <context-param>
+        <param-name>jakarta.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param> -->
 
-      <servlet>
-          <servlet-name>FacesServlet</servlet-name>
-          <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
-          <load-on-startup>1</load-on-startup>
-      </servlet>
+    <servlet>
+        <servlet-name>FacesServlet</servlet-name>
+        <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
-      <servlet>
-          <servlet-name>Main</servlet-name>
-          <servlet-class>my.cvmanager.web.Main</servlet-class>
-      </servlet>
+    <servlet-mapping>
+        <servlet-name>FacesServlet</servlet-name>
+        <url-pattern>*.xhtml</url-pattern>
+    </servlet-mapping>
 
-      <servlet-mapping>
-          <servlet-name>FacesServlet</servlet-name>
-          <url-pattern>*.xhtml</url-pattern>
-      </servlet-mapping>
+    <!--
+    <servlet>
+        <servlet-name>Main</servlet-name>
+        <servlet-class>my.cvmanager.web.Main</servlet-class>
+    </servlet>
 
-      <servlet-mapping>
-          <servlet-name>Main</servlet-name>
-          <url-pattern>/Main</url-pattern>
-      </servlet-mapping>
-  -->
+
+    <servlet-mapping>
+        <servlet-name>Main</servlet-name>
+        <url-pattern>/Main</url-pattern>
+    </servlet-mapping>-->
+
     <welcome-file-list>
         <welcome-file>login.xhtml</welcome-file>
     </welcome-file-list>
